feat(observability): adiciona metricas ao filtro de idempotencia